Utilizando el EventTarget

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <p class="description_container" id="description">
                 Breve descripción
             </p>
+            <button id= "hola" class="btn btn-primary" >Ocultar</button>
+        </div>
+        <div class="container-fluid">
+            
         </div>
 
         <div class="row">
@@ -47,5 +51,5 @@
     </footer>
    
 </body>
-<script  src="js/App.js"></script>
+<script type="text/javascript" src="js/event.js"></script>
 </html>
